--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </script>
 </head>
 <body>
-    <div>Welcome to Html5 Template Engine</div>
+    <div>Welcome to Backbone Template Engine</div>
 </body>
 </html>
