--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 <head>
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
     <title>Backbone Template Engine</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="description" content="Backbone Template Engine">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <link href="assets/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <link href="assets/css/print.css" media="print" rel="stylesheet" type="text/css" />
@@ -24,5 +21,22 @@
     </script>
 </head>
 <body>
+    <!--[if lt IE 8]>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <h1 id="head"></h1>
+    <h2>Features</h2>
+    <ul>
+        <li>The latest <a href="http://html5boilerplate.com/">html5boilerplate.com</a> source code.</li>
+        <li>Includes <a href="https://github.com/appleboy/normalize.scss">Normalize.scss</a> v2.1.x and v1.1.x.</li>
+        <li>The latest <a href="http://jquery.com">jQuery</a> and <a href="http://modernizr.com/">Modernizr</a> via <a href="http://bower.io/">Bower</a> package manager.</li>
+        <li>Support <a href="http://coffeescript.org/">CoffeeScript</a>, <a href="http://requirejs.org/">RequireJS</a>, <a href="http://compass-style.org/">Compass</a>, html minification (via <a href="http://code.google.com/p/htmlcompressor/">htmlcompressor</a>).</li>
+        <li>A lightweight web server listen to 4000 port (Using <a href="http://expressjs.com">Node Express Framework</a>).</li>
+        <li>Support JavaScript Task Runner <a href="http://gruntjs.com">GruntJS</a></li>
+        <li>Support JavaScript test framework <a href="http://visionmedia.github.io/mocha/">Mocha</a></li>
+    </ul>
+    <footer>
+        Author: Bo-Yi Wu, Twitter: <a href="http://twitter.com/appleboy">@appleboy</a>, Blog: <a href="blog.wu-boy.com">http://blog.wu-boy.com</a>
+    </footer>
 </body>
 </html>
