--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <h1 id="head"></h1>
+  <div id="logo"><img alt="logo" src="assets/images/chrome.png" /></div>
   <h2>Features</h2>
   <ul>
     <li>The latest <a href="http://html5boilerplate.com/">html5boilerplate.com</a> source code.</li>
