--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
   <footer>
     Author: Bo-Yi Wu, Twitter: <a href="http://twitter.com/appleboy">@appleboy</a>, Blog: <a href="blog.wu-boy.com">http://blog.wu-boy.com</a>
   </footer>
+  <a href="https://github.com/appleboy/backbone-template-engine" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="assets/images/fork_me_on_github.png" alt="Fork me on GitHub" class="github"></a>
   <script data-main="assets/js/main" src="assets/vendor/requirejs/require.js"></script>
   <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
