fixed link and change committer.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
     <li>Support JavaScript test framework <a href="http://visionmedia.github.io/mocha/">Mocha</a></li>
   </ul>
   <footer>
-    Author: Bo-Yi Wu, Twitter: <a href="http://twitter.com/appleboy">@appleboy</a>, Blog: <a href="blog.wu-boy.com">http://blog.wu-boy.com</a>
+    Author: Bo-Yi Wu, Twitter: <a href="http://twitter.com/appleboy" target="_blank">@appleboy</a>, Blog: <a href="http://blog.wu-boy.com" target="_blank">http://blog.wu-boy.com</a>
   </footer>
   <a href="https://github.com/appleboy/backbone-template-engine" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="assets/images/fork_me_on_github.png" alt="Fork me on GitHub" class="github"></a>
   <script data-main="assets/js/main" src="assets/vendor/requirejs/require.js"></script>
